k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-backend
  namespace: pos
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /msp
            pathType: Prefix
            backend:
              service:
                name: pos-backend
                port:
                  number: 80
